--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
 
-    <header>
-        <div>
+    <header class="jumbotran">
+        <div class="container">
             <div>
                 <div>
                     <h1>Ristorante con Fusion</h1>
@@ -27,8 +27,8 @@
         </div>
     </header>
 
-    <div>
-        <div>
+    <div class="container">
+        <div class="row">
             <div>
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
@@ -39,7 +39,7 @@
         </div>
 
 
-        <div>
+        <div class="row">
             <div>
                 <h3>This Month's Promotions</h3>
             </div>
@@ -49,7 +49,7 @@
             </div>
         </div>
 
-        <div>
+        <div class='row'>
             <div>
                 <h3>Meet our Culinary Specialists</h3>
             </div>
@@ -62,8 +62,8 @@
     </div>
 
     <footer>
-        <div>
-            <div>             
+        <div class="container">
+            <div classs="row">             
                 <div>
                     <h5>Links</h5>
                     <ul>
@@ -84,7 +84,7 @@
 		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
-                <div>
+                <div class="row">
                     <div>
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
