--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
 
-    <header class="jumbotran">
+    <header class="jumbotron">
         <div class="container">
-            <div>
+            <div class="row">
                 <div>
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
@@ -84,7 +84,7 @@
 		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
-                <div class="row">
+                <div>
                     <div>
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
            </div>
-           <div>             
+           <div class="row">             
                 <div>
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
